--- a/static/languages/en.ini
+++ b/static/languages/en.ini
@@ -5,6 +5,8 @@ passwordLabel = Password
 passwordPlaceholder = Enter your password
 loginSubmitButton = Log In
 
+loginErrorMessage = Incorrect username or password.
+
 errorTitle = Error
 errorHeader_invalidRequest = Invalid Request
 errorMessage_invalidRequest = The client sent a bad request.
@@ -14,3 +16,5 @@ errorHeader_missingRedirectUri = Missing Redirect URI
 errorMessage_missingRedirectUri = There are many redirect URIs for the client, but the client did not specify which one to use.
 errorHeader_invalidRedirectUri = Invalid Redirect URI
 errorMessage_invalidRedirectUri = The client provided a redirect URI that it is not allowed to redirect to.
+errorHeader_internalServerError = Server Error
+errorMessage_internalServerError = An unexpected error occurred.
