--- a/static/languages/en.ini
+++ b/static/languages/en.ini
@@ -16,5 +16,7 @@ errorHeader_missingRedirectUri = Missing Redirect URI
 errorMessage_missingRedirectUri = There are many redirect URIs for the client, but the client did not specify which one to use.
 errorHeader_invalidRedirectUri = Invalid Redirect URI
 errorMessage_invalidRedirectUri = The client provided a redirect URI that it is not allowed to redirect to.
+errorHeader_tooManyRequests = Too many failed login attempts
+errorMessage_tooManyRequests = Please wait one hour before attempting to log in again.
 errorHeader_internalServerError = Server Error
 errorMessage_internalServerError = An unexpected error occurred.
